--- a/index.html
+++ b/index.html
@@ -149,7 +149,40 @@
                 <!-- // tab -->
                 <div class="tab-content" id="pills-tabContent">
                     <div class="tab-pane fade show active" id="pills-about" role="tabpanel"
-                        aria-labelledby="pills-home-tab">
+                        aria-labelledby="pills-about-tab">
+                        <div class="slide">
+                            <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active" data-bs-interval="3000">
+                                        <img src="./img/slide2.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item" data-bs-interval="2000">
+                                        <img src="./img/slide1.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="./img/slide 3.jpg" class="d-block w-100" alt="...">
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button"
+                                    data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button"
+                                    data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <!-- end tab about -->
+
+                    <div class="tab-pane fade" id="pills-course" role="tabpanel" aria-labelledby="pills-profile-tab">
+                        22222222</div>
+                    <div class="tab-pane fade" id="pills-calendar" role="tabpanel" aria-labelledby="pills-calendar-tab">
                         <div class="slide">
                             <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-inner">
@@ -227,7 +260,7 @@
                         </div>
 
                         <!-- sale -->
-                    
+
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-5"></div>
@@ -253,130 +286,130 @@
                             </div>
                         </div>
 
-                    <div class="container-fluid bg-light">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-3 col-md-4 col-sm-6">
+                        <div class="container-fluid bg-light">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-lg-3 col-md-4 col-sm-6">
 
-                                    <div class="item mb-4">
-                                        <img src="./img/php.png" alt="" class="w-100">
-                                        <div class="caption rounded-3 d-flex flex-column ">
-                                            <img src="./img/logophp.png" alt="" class="w-25">
-                                            <p class="text-light  fs-5 text-center text-uppercase">web php fullstack</p>
+                                        <div class="item mb-4">
+                                            <img src="./img/php.png" alt="" class="w-100">
+                                            <div class="caption rounded-3 d-flex flex-column ">
+                                                <img src="./img/logophp.png" alt="" class="w-25">
+                                                <p class="text-light  fs-5 text-center text-uppercase">web php fullstack
+                                                </p>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
 
-                                <div class="col-lg-3 col-md-4 col-sm-6">
+                                    <div class="col-lg-3 col-md-4 col-sm-6">
 
-                                    <div class="item mb-4">
-                                        <img src="./img/java.png" alt="" class="w-100">
-                                        <div class="caption rounded-3 d-flex flex-column ">
-                                            <img src="./img/java (1).png" alt="" class="w-25">
-                                            <p class="text-light  fs-5 text-center text-uppercase">java web fullstack</p>
+                                        <div class="item mb-4">
+                                            <img src="./img/java.png" alt="" class="w-100">
+                                            <div class="caption rounded-3 d-flex flex-column ">
+                                                <img src="./img/java (1).png" alt="" class="w-25">
+                                                <p class="text-light  fs-5 text-center text-uppercase">java web
+                                                    fullstack</p>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
 
-                                <div class="col-lg-3 col-md-4 col-sm-6">
+                                    <div class="col-lg-3 col-md-4 col-sm-6">
 
-                                    <div class="item mb-4">
-                                        <img src="./img/tester.png" alt="" class="w-100">
-                                        <div class="caption rounded-3 d-flex flex-column ">
-                                            <img src="./img/tester (1).png" alt="" class="w-25">
-                                            <p class="text-light  fs-5 text-center text-uppercase">kiểm thử phần mềm</p>
+                                        <div class="item mb-4">
+                                            <img src="./img/tester.png" alt="" class="w-100">
+                                            <div class="caption rounded-3 d-flex flex-column ">
+                                                <img src="./img/tester (1).png" alt="" class="w-25">
+                                                <p class="text-light  fs-5 text-center text-uppercase">kiểm thử phần mềm
+                                                </p>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-lg-3 col-md-4 col-sm-6">
+                                    <div class="col-lg-3 col-md-4 col-sm-6">
 
-                                    <div class="item mb-4">
-                                        <img src="./img/android.png" alt="" class="w-100">
-                                        <div class="caption rounded-3 d-flex flex-column ">
-                                            <img src="./img/android (1).png" alt="" class="w-25">
-                                            <p class="text-light  fs-5  ms-4 text-uppercase ">java android</p>
+                                        <div class="item mb-4">
+                                            <img src="./img/android.png" alt="" class="w-100">
+                                            <div class="caption rounded-3 d-flex flex-column ">
+                                                <img src="./img/android (1).png" alt="" class="w-25">
+                                                <p class="text-light  fs-5  ms-4 text-uppercase ">java android</p>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-lg-3 col-md-4 col-sm-6">
+                                    <div class="col-lg-3 col-md-4 col-sm-6">
 
-                                    <div class="item mb-4">
-                                        <img src="./img/python.png" alt="" class="w-100">
-                                        <div class="caption rounded-3 d-flex flex-column ">
-                                            <img src="./img/python1.png" alt="" class="w-25">
-                                            <p class="text-light  fs-5 ms-3  text-uppercase ">python django</p>
+                                        <div class="item mb-4">
+                                            <img src="./img/python.png" alt="" class="w-100">
+                                            <div class="caption rounded-3 d-flex flex-column ">
+                                                <img src="./img/python1.png" alt="" class="w-25">
+                                                <p class="text-light  fs-5 ms-3  text-uppercase ">python django</p>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-lg-3 col-md-4 col-sm-6">
+                                    <div class="col-lg-3 col-md-4 col-sm-6">
 
-                                    <div class="item mb-4">
-                                        <img src="./img/react2.png" alt="" class="w-100">
-                                        <div class="caption rounded-3 d-flex flex-column ">
-                                            <img src="./img/react (1).png" alt="" class="w-25">
-                                            <p class="text-light  fs-5  text-uppercase ">frontend reactjs</p>
+                                        <div class="item mb-4">
+                                            <img src="./img/react2.png" alt="" class="w-100">
+                                            <div class="caption rounded-3 d-flex flex-column ">
+                                                <img src="./img/react (1).png" alt="" class="w-25">
+                                                <p class="text-light  fs-5  text-uppercase ">frontend reactjs</p>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-lg-3 col-md-4 col-sm-6">
+                                    <div class="col-lg-3 col-md-4 col-sm-6">
 
-                                    <div class="item mb-4">
-                                        <img src="./img/dotnet.png" alt="" class="w-100">
-                                        <div class="caption rounded-3 d-flex flex-column ">
-                                            <img src="./img/trắng (1).png" alt="" class="w-25">
-                                            <p class="text-light  fs-5  ms-4 text-uppercase ">asp .net mvc</p>
+                                        <div class="item mb-4">
+                                            <img src="./img/dotnet.png" alt="" class="w-100">
+                                            <div class="caption rounded-3 d-flex flex-column ">
+                                                <img src="./img/trắng (1).png" alt="" class="w-25">
+                                                <p class="text-light  fs-5  ms-4 text-uppercase ">asp .net mvc</p>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-lg-3 col-md-4 col-sm-6">
+                                    <div class="col-lg-3 col-md-4 col-sm-6">
 
-                                    <div class="item mb-4">
-                                        <img src="./img/angola.png" alt="" class="w-100">
-                                        <div class="caption rounded-3 d-flex flex-column ">
-                                            <img src="./img/angular.png" alt="" class="w-25">
-                                            <p class="text-light  fs-5  text-uppercase ">fronend angular</p>
+                                        <div class="item mb-4">
+                                            <img src="./img/angola.png" alt="" class="w-100">
+                                            <div class="caption rounded-3 d-flex flex-column ">
+                                                <img src="./img/angular.png" alt="" class="w-25">
+                                                <p class="text-light  fs-5  text-uppercase ">fronend angular</p>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-lg-3 col-md-4 col-sm-6">
+                                    <div class="col-lg-3 col-md-4 col-sm-6">
 
-                                    <div class="item mb-4">
-                                        <img src="./img/javacore.png" alt="" class="w-100">
-                                        <div class="caption rounded-3 d-flex flex-column ">
-                                            <img src="./img/java (1).png" alt="" class="w-25">
-                                            <p class="text-light  fs-5 ms-2  text-uppercase ">java core online</p>
+                                        <div class="item mb-4">
+                                            <img src="./img/javacore.png" alt="" class="w-100">
+                                            <div class="caption rounded-3 d-flex flex-column ">
+                                                <img src="./img/java (1).png" alt="" class="w-25">
+                                                <p class="text-light  fs-5 ms-2  text-uppercase ">java core online</p>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-lg-3 col-md-4 col-sm-6">
+                                    <div class="col-lg-3 col-md-4 col-sm-6">
 
-                                    <div class="item mb-4">
-                                        <img src="./img/c++.png" alt="" class="w-100">
-                                        <div class="caption rounded-3 d-flex flex-column ">
-                                            <img src="./img/C++ (2).png" alt="" class="w-25">
-                                            <p class="text-light  fs-5  text-uppercase ">lập trình c++ cơ bản</p>
+                                        <div class="item mb-4">
+                                            <img src="./img/c++.png" alt="" class="w-100">
+                                            <div class="caption rounded-3 d-flex flex-column ">
+                                                <img src="./img/C++ (2).png" alt="" class="w-25">
+                                                <p class="text-light  fs-5  text-uppercase ">lập trình c++ cơ bản</p>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                                <div class="col-lg-3 col-md-4 col-sm-6">
+                                    <div class="col-lg-3 col-md-4 col-sm-6">
 
-                                    <div class="item mb-5">
-                                        <img src="./img/ps.png" alt="" class="w-100">
-                                        <div class="caption rounded-3 d-flex flex-column ">
-                                            <img src="./img/Asset 2.png" alt="" class="w-25">
-                                            <p class="text-light  fs-5  text-uppercase px-auto">khoá design cơ bản</p>
+                                        <div class="item mb-5">
+                                            <img src="./img/ps.png" alt="" class="w-100">
+                                            <div class="caption rounded-3 d-flex flex-column ">
+                                                <img src="./img/Asset 2.png" alt="" class="w-25">
+                                                <p class="text-light  fs-5  text-uppercase px-auto">khoá design cơ bản
+                                                </p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
 
                     </div>
-                    <div class="tab-pane fade" id="pills-course" role="tabpanel" aria-labelledby="pills-profile-tab">
-                        22222222</div>
-                    <div class="tab-pane fade" id="pills-calendar" role="tabpanel" aria-labelledby="pills-calendar-tab">
-                        3</div>
                     <div class="tab-pane fade" id="pills-news" role="tabpanel" aria-labelledby="pills-news-tab">
                         4</div>
                     <div class="tab-pane fade" id="pills-product" role="tabpanel" aria-labelledby="pills-product-tab">
