--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+    <script src="main.js"></script>
     <title>Document</title>
 </head>
 
@@ -117,7 +119,7 @@
         </div>
     </div>
 
-    <div class="container-fluid mt-5 pt-3">
+    <div class="container-fluid mt-5 pt-3 body">
         <div class="row">
             <div class="col">
                 <!-- // tab -->
@@ -267,7 +269,8 @@
                                                 dụng vào chương trình giáo dục đào tạo CNTT chất lượng cao tại Việt
                                                 Nam.</span> <br>
                                             <span>Là trung tâm kết nối các thành tựu công nghệ quốc tế lĩnh vực Công
-                                                nghệ thông tin cùng với những chuyên gia, kỹ sư người Việt.</span>
+                                                nghệ thông tin cùng với những chuyên gia, kỹ sư người Việt.</span> <br>
+                                            <br>
                                         </div>
                                     </div>
                                 </div>
@@ -275,6 +278,8 @@
                         </div>
 
                     </div>
+
+                    <!-- footer -->
 
                     <div class="wrapper">
                         <div class="container px-0">
@@ -366,13 +371,15 @@
                                                 <div>
                                                     <span>Lập trình C++ cơ bản</span>
                                                 </div>
-                                                <div>
+                                                <div class="mb-3">
                                                     <span>Khóa design cơ bản</span>
                                                 </div>
 
                                             </div>
                                         </div>
                                     </div>
+
+
                                 </div>
                                 <div class="col-md-3">
                                     <div class="iconFooter">
@@ -387,14 +394,32 @@
                                                 <span class="ms-3">19k lượt thích</span>
                                             </div>
                                         </div>
+                                        <div class="fb bg-body d-flex align-items-center">
+                                            <img src="./img/facebook.png" alt="" class="ms-1">
+                                            <span class="text-dark ms-1"> Thích Trang</span>
+                                        </div>
                                     </div>
                                 </div>
+                            </div>
+
+
+
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class=" coppyRight text-center py-2">
+                                <span class=" text-light">Copyright © 2020 t3h.edu.vn. All rights reserved.</span>
                             </div>
                         </div>
                     </div>
 
+                    <div class="onTop1">
+                        <button onclick="myFunction()">top</button>
+                    </div>
 
 
+                    <!-- end footer -->
 
                     <div class="tab-pane fade" id="pills-course" role="tabpanel" aria-labelledby="pills-profile-tab">
                         22222222</div>
